[package]
name = "tac"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "integration"
path = "integration/main.rs"
harness = false

[features]
default = []
debug_trace_execution = []
debug_print_code = []

[dependencies]
clap = "3.0.0-beta.4"
lazy_static = "1.4.0"
rustyline = "9.0.0"

[dev-dependencies]
similar = { version = "2.1", features = ["inline"] }
console = "0.15"